added database connector

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "db": "server=den1.mysql6.gear.host;port=3306;database=shoestore4;user id=shoestore4;password=Nm2x1d94ML_!"
 }
