--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "db": "server=den1.mysql6.gear.host;port=3306;database=shoestore4;user id=shoestore4;password=Nm2x1d94ML_!"
 }
